--- a/src/ae_attribute_inspector/html/app.html
+++ b/src/ae_attribute_inspector/html/app.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title></title>
@@ -6,11 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/a11yTree.css" />
-    <script type="text/javascript" src="../js/config.js"></script>
-    <script type="text/javascript" src="../external/require.js" data-main="../js/main" charset="utf-8"></script>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
+    <script src="../js/main.js"></script>
   </body>
 </html>
